add nav+ hero html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,33 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header"></header>
-    <main class="main"></main>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <a href="#" class="nav-logo">BUSINESS TEMPLATE</a>
+                <ul class="nav-list">
+                    <li><a href="#" class="nav-link">Home</a></li>
+                    <li><a href="#" class="nav-link">Features</a></li>
+                    <li><a href="#" class="nav-link">Pricing</a></li>
+                    <li><a href="#" class="nav-link">Blog</a></li>
+                    <li><a href="#" class="nav-link">About</a></li>
+                    <li><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-title">Customer service for a connected world.</h1>
+                <p class="hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus augue id dapibus ultricies. Morbi venenatis</p>
+                <ul class="hero-buttons">
+                    <li><a href="#">Try It Free Now</a></li>
+                    <li><a href="#">Learn More</a></li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <footer class="footer"></footer>
 </body>
 </html>
