+features +start testamonials

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </header>
     <main class="main">
+
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Customer service for a connected world.</h1>
@@ -32,6 +33,64 @@
                     <li><a href="#" class="hero-buttons-btn btn">Try It Free Now</a></li>
                     <li><a href="#" class="hero-buttons-btn btn">Learn More</a></li>
                 </ul>
+            </div>
+        </section>
+
+        <section class="promotion">
+            <div class="container">
+                <ul class="promotion-list">
+                    <li><h2 class="promotion-list-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2></li>
+                    <li><p class="promotion-list-text">Nullam laoreet nibh in lectus laoreet, vitae laoreet libero condimentum. Suspendisse iaculis eros sed risus luctus venenatis</p></li>
+                </ul>
+                <img class="promotion-img" src="./img/macbook.png" alt="macbook picture">
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="container">
+                <h2 class="features-title">Lorem ipsum dolor sit amet</h2>
+                <p class="features-text">Quisque vel tellus accumsan, porttitor metus vitae, consectetur felis</p>
+                <ul class="features-list">
+                    <li>
+                        <div class="features-card">
+                            <img class="features-card-img" src="./img/sale.png" alt="sale">
+                            <h3 class="features-card-title">Lorem ipsum dolor</h3>
+                            <p class="features-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo</p>
+                            <a class="features-card-btn btn" href="#">Learn More</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="features-card">
+                            <img class="features-card-img" src="./img/plane.png" alt="plane">
+                            <h3 class="features-card-title">Lorem ipsum dolor</h3>
+                            <p class="features-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo</p>
+                            <a class="features-card-btn btn" href="#">Learn More</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="features-card">
+                            <img class="features-card-img" src="./img/award.png" alt="award">
+                            <h3 class="features-card-title">Lorem ipsum dolor</h3>
+                            <p class="features-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo</p>
+                            <a class="features-card-btn btn" href="#">Learn More</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="features-card">
+                            <img class="features-card-img" src="./img/like.png" alt="like">
+                            <h3 class="features-card-title">Lorem ipsum dolor</h3>
+                            <p class="features-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo</p>
+                            <a class="features-card-btn btn" href="#">Learn More</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="container">
+                <h2 class="testimonials-title">Lorem ipsum dolor sit amet</h2>
+                
             </div>
         </section>
 
