--- a/index.html
+++ b/index.html
@@ -90,7 +90,41 @@
         <section class="testimonials">
             <div class="container">
                 <h2 class="testimonials-title">Lorem ipsum dolor sit amet</h2>
-                
+                <ul class="testimonials-list">
+                    <li>
+                        <div class="testimonials-card">
+                            <p class="testimonials-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo, a dapibus arcu purus et arcu</p>
+                            <div class="testimonials-card-person">
+                                <div class="testimonials-card-container">
+                                    <img class="testimonials-card-container-img" src="./img/polinab.jpg" alt="polinab">
+                                </div>
+                                <p class="testimonials-card-profession">Director Engineering, <a class="testimonials-card-name" href="#">@Jon Doe</a></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="testimonials-card">
+                            <p class="testimonials-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo, a dapibus arcu purus et arcu</p>
+                            <div class="testimonials-card-person">
+                                <div class="testimonials-card-container">
+                                    <img class="testimonials-card-container-img" src="./img/polinab.jpg" alt="polinab">
+                                </div>
+                                <p class="testimonials-card-profession">Director Engineering, <a class="testimonials-card-name" href="#">@Jon Doe</a></p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="testimonials-card">
+                            <p class="testimonials-card-text">Morbi venenatis, nulla at accumsan fermentum, risus ligula vehicula justo, a dapibus arcu purus et arcu</p>
+                            <div class="testimonials-card-person">
+                                <div class="testimonials-card-container">
+                                    <img class="testimonials-card-container-img" src="./img/polinab.jpg" alt="polinab">
+                                </div>
+                                <p class="testimonials-card-profession">Director Engineering, <a class="testimonials-card-name" href="#">@Jon Doe</a></p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 
