--- a/index.html
+++ b/index.html
@@ -125,6 +125,23 @@
                         </div>
                     </li>
                 </ul>
+
+                <div class="testimonials-radio">
+                    <input class="testimonials-input" type="radio" name="radio" id="radio1" checked>
+                    <label class="testimonials-label" for="radio1"></label>
+                    <input class="testimonials-input" type="radio" name="radio" id="radio2">
+                    <label class="testimonials-label"  for="radio2"></label>
+                    <input class="testimonials-input" type="radio" name="radio" id="radio3">
+                    <label class="testimonials-label" for="radio3"></label>
+                </div>
+            </div>
+        </section>
+
+        <section class="trial">
+            <div class="container">
+                <h2 class="trial-title">Lorem ipsum dolor sit amet, consectetur</h2>
+                <p class="trial-text">Nullam laoreet nibh in lectus laoreet, vitae laoreet libero condimentum</p>
+                <a class="trial-btn btn" href="#">Try it Free now</a>
             </div>
         </section>
 
