--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <header class="header">
         <div class="container">
             <nav class="nav">
@@ -23,6 +24,7 @@
             </nav>
         </div>
     </header>
+
     <main class="main">
 
         <section class="hero">
@@ -144,9 +146,57 @@
                 <a class="trial-btn btn" href="#">Try it Free now</a>
             </div>
         </section>
-
-
     </main>
-    <footer class="footer"></footer>
+    
+    <footer class="footer">
+        <div class="container">
+            <h2 class="footer-title" hidden>footer</h2>
+            <ul class="footer-list">
+                <li>
+                    <div class="footer-card">
+                        <h3 class="footer-card-title">Product</h3>
+                        <a class="footer-card-link" href="#">iPhone, iPad & Android</a>
+                        <a class="footer-card-link" href="#">Widgets</a>
+                        <a class="footer-card-link" href="#">Instant answers</a>
+                        <a class="footer-card-link" href="#">Inspector</a>
+                        <a class="footer-card-link" href="#">Facebook</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="footer-card">
+                        <h3 class="footer-card-title">Resources</h3>
+                        <a class="footer-card-link" href="#">Success Stories</a>
+                        <a class="footer-card-link" href="#">Integration Partners</a>
+                        <a class="footer-card-link" href="#">UserCentered</a>
+                        <a class="footer-card-link" href="#">Developer Docs</a>
+                        <a class="footer-card-link" href="#">Knowledge base</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="footer-card">
+                        <h3 class="footer-card-title">Other</h3>
+                        <a class="footer-card-link" href="#">Feedback forum</a>
+                        <a class="footer-card-link" href="#">System status</a>
+                        <a class="footer-card-link" href="#">Security and compliance</a>
+                        <a class="footer-card-link" href="#">Terms of Service</a>
+                        <a class="footer-card-link" href="#">Blog</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="footer-card">
+                        <h3 class="footer-card-title">Newsletter</h3>
+                        <p class="footer-card-text">Subscribe to our newsletter! Get productivity tips, 
+                            product updates and special offers!</p>
+                        <form class="footer-card-form" action="">
+                            <input class="footer-card-form-input" type="text" name="" id="" placeholder="Your e-mail address">
+                            <button class="footer-card-form-btn btn" type="reset">Subscribe</button>
+                        </form>
+                    </div>
+                </li>
+            </ul>
+
+            <p class="footer-copyright">© All rights reserved 2014. Xyz Inc.</p>
+        </div>
+    </footer>
 </body>
 </html>
