--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="nav-logo">BUSINESS TEMPLATE</a>
-                <ul class="nav-list">
-                    <li><a href="#" class="nav-list-link">Home</a></li>
-                    <li><a href="#" class="nav-list-link">Features</a></li>
-                    <li><a href="#" class="nav-list-link">Pricing</a></li>
-                    <li><a href="#" class="nav-list-link">Blog</a></li>
-                    <li><a href="#" class="nav-list-link">About</a></li>
-                    <li><a href="#" class="nav-list-link">Contact</a></li>
-                </ul>
+                <label for="navmobile">
+                    <label class="nav-mobile-btn btn" for="navmobile">NAV</label>
+                    <input class="nav-mobile-checkbox" type="checkbox" name="" id="navmobile">
+                    <ul class="nav-list">
+                        <li><a href="#" class="nav-list-link">Home</a></li>
+                        <li><a href="#" class="nav-list-link">Features</a></li>
+                        <li><a href="#" class="nav-list-link">Pricing</a></li>
+                        <li><a href="#" class="nav-list-link">Blog</a></li>
+                        <li><a href="#" class="nav-list-link">About</a></li>
+                        <li><a href="#" class="nav-list-link">Contact</a></li>
+                    </ul>
+                </label>
             </nav>
         </div>
     </header>
